--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       <span>rezepte. fotos. geschichten.</span>
     </div>
     <div id="footer">
-      <span>datenschutz. impressum.</span>
+      <a id="datenschutz-impressum" href="/datenschutz-impressum" target="_blank">datenschutz. impressum.</a>
     </div>
   </body>
 </html>
