--- a/leseglueck/index.html
+++ b/leseglueck/index.html
@@ -19,7 +19,7 @@
     </div>
     <div id="bild">
       <span>Jedes Kochbuch ist ein Schatz!</span>
-      <span id="mehrLesen">mehr lesen <br> <i class="fab fa-readme"></i></span>
+      <span id="mehrLesen">mehr lesen <br> <i class="fas fa-utensil-spoon"></i></span>
     </div>
     <div id="textExpand" class="closed">
       Mal sind es ERINNERUNGEN an die liebe Oma, mal an einen Duft, einen besonderen Abend, einen tollen Urlaub, ... <br>
