--- a/rezepte/index.html
+++ b/rezepte/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="/styles/rezepte.css">
     <script src="/scripts/textExpand.js" defer charset="utf-8"></script>
     <script src="/scripts/util/insert-recipes.js" defer charset="utf-8"></script>
+    <script src="/scripts/scrollTop.js" defer charset="utf-8"></script>
   </head>
   <body>
     <div id="navbar">
@@ -24,7 +25,8 @@
     <!-- <img src="/imgs/rezepte/zettelZ.jpg" alt="" id="zettelZ"> -->
     <div id="bild">
       <span>Schokobraun, tomatenrot, spinatgrün oder eigelb....</span>
-      <span id="mehrLesen">mehr lesen <br> <i class="fab fa-readme"></i></span>
+      <span id="mehrLesen">mehr lesen <br> <i class="fas fa-utensil-spoon"></i></span>
+      <!-- <i class="fab fa-readme"></i> -->
     </div>
     <div id="textExpand" class="closed">
       In unserer Küche geht es immer bunt zu! <br>
