--- a/geschichten/index.html
+++ b/geschichten/index.html
@@ -9,6 +9,7 @@
     <script src="/scripts/textExpand.js" defer charset="utf-8"></script>
     <!-- <script src="/scripts/util/löffel-glück.js" defer charset="utf-8"></script> -->
     <script src="/scripts/geschichten.js" defer charset="utf-8"></script>
+    <script src="/scripts/scrollTop.js" defer charset="utf-8"></script>
     <noscript>
       <style media="screen">
         [data-simplebar] {
@@ -28,7 +29,7 @@
     </div>
     <div id="bild">
       <span>Kitchen-Stories, Reiseberichte, dies&das...</span>
-      <span id="mehrLesen">mehr lesen <br> <i class="fab fa-readme"></i></span>
+      <span id="mehrLesen">mehr lesen <br> <i class="fas fa-utensil-spoon"></i></span>
     </div>
     <div id="textExpand" class="closed">
       In langen Wintermonaten, GEMÜTLICH am Lagerfeuer oder im Bett zur guten Nacht - immer erzählen sich Menschen Geschichten.<br>
@@ -123,6 +124,59 @@
             Auf Küchenparties nimmt sie gern das Buffet auf.<br>
             Und wir freuen uns besonders, dass Sie unseren Fotografien einen ganz einzigartigen Rahmen bietet! <br>
             Welch GLÜCK für uns...
+          </div>
+        </div>
+      </div>
+      <div class="geschichte">
+        <img src="/imgs/geschichten/lavendel.jpg" alt="">
+        <div class="text">
+          <div class="content">
+            <h3>Heimatliebe - Petite Provence in Ostwestfalen</h3>
+            <br>
+            <br>
+            Immer wieder gern starten wir im Juli zu einem Ausflug in die HEIMISCHEN Lavendelfelder - manchmal sogar mit dem Fahrrad.  <br>
+            Der Duft der blauen Blumen verzaubert uns. Wir fühlen uns wie GOTT IN FRANKREICH. Stundenlang sitzen wir auf der angrenzenden Wiese und GENIESSEN den Blick in die LILA LANDSCHAFT. Ein Traum.  <br>
+            An einer zum Verkaufsladen umgebauten Ape stöbern wir nach allerlei hübschen und nützlichen - aus LAVENDEL hergestellten - Kleinigkeiten:  <br>
+            Öl, Tee, Seife, Mückenstift, Wäschesäckchen... Soooooo schööööön! <br>
+            Was wir manchmal echt vermissen: köstliches französches Essen - Tarte, Cidre, Galettes, ein guter Wein.... <br>
+            Bis es dort etwas Leckeres zu schmausen gibt, packen wir unseren Rucksack oder Picknick-Korb.  <br>
+            Welch GLÜCK, den Urlaub direkt vor der Haustür zu haben... <br>
+
+
+
+          </div>
+        </div>
+      </div>
+      <div class="geschichte">
+        <img src="/imgs/geschichten/waldpicknick.jpg" alt="">
+        <div class="text">
+          <div class="content">
+            <h3>WALDPICKNICK - Genießen unter Freunden</h3>
+            <br>
+            <br>
+            Wir lieben den Wald direkt vor unserer Haustür! Ein Arboretum. Ein Kleinod. <br>
+            Dort joggen, spazieren, spielen, gedenken, beten wir. Wir treffen Freunde & Tiere, pflücken BÄRLAUCH, stibitzen BEEREN, entdecken PILZE, trinken Brunnenwasser, waten im Tretbecken, sammeln Kastanien, ... <br>
+            Und wenn im Oktober das kleine Café am Brunnenhäuschen schließt, packen wir in unsere Körbchen viele KLEINE KÖSTLICHKEITEN und freuen uns auf unser Waldpicknick. <br>
+            Vermooste Treppenstufen, dicke Steine am Wasser, ausgehöhlte Totholzstämme - kann es eine schönere Kulisse geben? GOLDENE BLÄTTER fallen und wir decken auf einem BAUMSTAMM unseren Tisch. So wie die dicke Eiche am Wegesrand die alte Buche fest umarmt, so fühlen auch wir uns mit der Natur verbunden. Mitgebrachtes schmeckt an der FRISCHEN LUFT einfach viel besser als zu Haus! Und weil das Orkantief "Friederike" im Januar 2018 auch in unserem Lieblingswald eine Schneise der Verwüstung hinterlassen hat, beteiligen wir uns absolut gern an der Aktion "Bürgerwald". Es macht etwas mit uns, unsere selbst gepflanzten Bäume wachsen sehen zu können! Und irgendwann - wenn sie groß und stark sind - freuen wir uns darauf, in ihrem SCHATTEN zum Waldpicknick einzuladen. Welch GLÜCK für uns und unsere Freunde....
+          </div>
+        </div>
+      </div>
+      <div class="geschichte">
+        <img src="/imgs/geschichten/mini.jpg" alt="">
+        <div class="text">
+          <div class="content">
+            <h3>WEIHNACHTEN ZU HAUSE...</h3>
+            <br>
+            <br>
+            ...und ich werde an Weihnachten nach Hause kommen. Wir alle tun das und sollten es tun. Für eine kurze Rast, je länger desto besser, um Ruhe zu aufzunehmen und zu geben. (Charles Dickens) <br>
+            <br>
+            Für Nicole ist die Weihnachtszeit die schönste Zeit des Jahres und ein bisschen ist sie es auch für Jette. WELTJAHRESBESTZEIT! Es ist die Rast in der Familie. Wir alle lieben diese besondere Zeit der Bräuche und Traditionen, der Lieder und Geschichten, des Kerzenscheins und Plätzchendufts, der Wunschzettel und Geheimnisse... Die schönste Art des Wartens ist und bleibt die VORFREUDE! <br>
+            <br>
+            <h3>UNSER TANNENBAUM</h4> <br>
+            Alle Jahre wieder haben wir tatsächlich das große GLÜCK, uns frühzeitig in einer Schonung unseren Tannenbaum aussuchen, ihn dann ein paar Tage vor Weihnachten selbst schlagen und feierlich nach Hause geleiten zu können. Alle Jahre wieder zelebrieren wir diesen Brauch gemütlich mit heißem Apfelpunsch & Glühwein, köstlichen Keksen und einer ordentlichen Portion Vorfreude auf das große Fest. Wir lieben unseren Tannenbaum! Wir lieben es, ihn gemeinsam zu schmücken, ihn zu besingen, zu bestaunen und ihm seinen Platz in unserer Mitte zu geben - mit all seinem Glanz, seiner Hoffnung, seines Friedens und seiner Freude! Auch wenn farblich viele verschiedene Konfektionen für das Kleid unseres Baumes in den Kisten warten, so schmücken wir ihn eigentlich alle Jahre wieder - skandinavisch klassisch - in rot & weiß. Und alle Jahre wieder kaufen wir ein paar ganz besondere Schmuckstücke, die uns eine Geschichte erzählen und ihn zu unserem ganz persönlichen Weihnachtsbaum machen. In diesem besonderen Jahr 2020 werden wir dankbar vier weiße Porzellan-Löffel an die Zweige hängen, wir haben allen Grund dazu: viel mehr als GLÜCK - Segen! <br>
+            <br>
+            <h3>WEIHNACHTSBÄCKEREI MIT OMA & OPA </h4><br>
+            Während Nicole die Kisten mit der Weihnachtsdekoration aus dem Keller holt, stöbert Jette bereits in sämtlichen Backbüchern und ihren Aufzeichnungen, welche Weihnachtsplätzchen es in diesem Jahr in die Top 10 der Keksdosen schafft. Außer Konkurrenz rangiert das Spritzgebäck von Oma und Opa auf dem allerersten Platz - und das schon, seit Nicole noch ein kleines Kind war. Eine liebgewonnene Tradition: Jette und ihr Bruder Moritz backen jedes Jahr wieder bei und mit den Großeltern für die gesamten Familien - Spritzgebäck aus 2,5 kg Mehl! Dabei wird in der Weihnachtsbäckerei ganz fortschrittlich in Arbeitsteilung gewerkelt. Während sich Oma und Jette um das Herstellen des Teigs kümmern, bringen Opa und Moritz den Fleischwolf in Position und den Backofen auf Betriebstemperatur. Die Technik ist eben Männersache! Und wenn der Teig zwei Spielrunden "Rummicub" im Kühlschrank verweilt hat, schreitet die Mannschaft zur Tat: Opa dreht den Fleischwolf, Jette und Moritz schneiden die Teigstücke ab und platzieren sie abwechselnd auf den Blechen, sorgen für Teig-Nachschub. Oma bedient Ofen und Auskühlgitter und startet bereits mit der Schokoglasur - Fließbandarbeit par Excellance! Aufgrund von Corona war dieses Jahr ein gemeinsames Backen nicht möglich, Oma & Opa haben es dieses Jahr leider allein gemacht. Unsere Freude war riesengroß, als zum ersten Advent plötzlich zwei prall gefüllte Dosen mit den "weltbesten Weihnachtsplätzchen" vor unserer Haustür standen... unerwartetes WEIHNACHTSGLÜCK! <br>
           </div>
         </div>
       </div>
