Kleine Fehler behoben und Verbesserungen

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Löffelweise Glück</title>
+    <link rel="stylesheet" href="/styles/fontawesome.css">
     <link rel="stylesheet" href="/styles/style.css">
     <link rel="stylesheet" href="/styles/index.css">
     <!-- <script src="/scripts/insert-recipes.js" charset="utf-8"></script> -->
@@ -22,6 +23,7 @@
       <span>rezepte. fotos. geschichten.</span>
     </div>
     <div id="footer">
+      <a id="instagram" href="https://www.instagram.com/loeffelweise.glueck/" target="_blank" title="Hier geht's zu unserer Instagram Seite"><i class="fab fa-instagram"></i></a>
       <a id="datenschutz-impressum" href="/datenschutz-impressum" target="_blank">datenschutz. impressum.</a>
     </div>
   </body>
