--- a/geschichten/index.html
+++ b/geschichten/index.html
@@ -47,12 +47,13 @@
             Kennst du das? Du hast eine IDEE. Aus der Situation heraus stellen sich Fragen. Auf der Suche nach Antworten erhältst du neue INSPIRATIONEN.
             Gedanken verselbstständigen sich. Die kleine Idee wird groß und größer. Die FREUDE in dir wächst! <br>
             <br>
-            So war das auch mit unserem BLOG. <br>
+            So war es auch mit unserem BLOG. <br>
             <br>
             Entstanden als sinnbringende Beschäftigung in der #WirBleibenZuhause-Corona-Zeit. Bei aller Sorge um Gesundheit, Familie, Schule, Job freuten wir uns aber auch
             über die GESCHENKTE ZUSAMMENZEIT. Wir freuten uns auf spielen, lesen, lachen... und auf KOCHEN & BACKEN!  <br>
             <br>
-            "Eine gute Küche ist das Fundament jeden Glücks." (Auguste Escoffier, Guide Culinaire 1847- 1935) <br>
+            "Eine gute Küche ist das Fundament jeden Glücks." <br>
+            (Auguste Escoffier, Guide Culinaire 1847- 1935) <br>
             <br>
             Wir hatten richtig Lust, neue Rezepte auszuprobieren, zu experimentieren und uns gegenseitig mit LECKEREIEN zu verwöhnen. ALLES HOMEMADE!
             Weil viele tolle Gerichte gelangen, sooooooo lecker schmeckten, war schnell die Idee entstanden, unsere Kreationen auf Instagram zu posten:
@@ -66,7 +67,7 @@
             Entlohnt wird in Naturalien: LÖFFELWEISE GLÜCK! <br>
             <br>
             Wir erheben keinen Anspruch auf Professionalität, haben einfach Spaß! Die gemeinsame Zeit genießen wir!
-            Gespannt sind wir auf das, was sich aus unserem kleinen Projekt - EST. 2020- entwickeln wird...
+            Gespannt sind wir auf das, was sich aus unserem kleinen Projekt - EST. 2020 - entwickeln wird...
           </div>
         </div>
       </div>
@@ -76,7 +77,7 @@
           <div class="content">
             <h3>DARUM...</h3>
             <br>
-            konnte es kein anderer Name für unseren Blog sein...<br>
+            ...konnte es kein anderer Name für unseren Blog sein...<br>
             <br>
             Der Löffel ist für uns der Inbegriff eines jeden Esswerkzeugs - abmessen, rühren und GENIESSEN.
             Zu allen Zeiten, in allen Kulturen, auf allen Kontinenten gibt es den Löffel. <br>
@@ -86,7 +87,7 @@
             Kleine Kinder starten mit ihm die ersten Versuche der Nahrungsaufnahme
             und am Ende geben wir ihn ab, den Löffel.<br>
             <br>
-            Essbares "löffelweise" zu konsumieren
+            Essbares "löffelweise" zu konsumieren,
             drückt für uns eine ganz besondere WERTSCHÄTZUNG der Nahrung gegenüber aus: <br>
             Nicht unmäßiges Verschlingen, gieriges Verschwenden,
             sondern respektvoller Genuss, achtsame Portionierung. <br>
@@ -99,7 +100,8 @@
             sondern auch, weil es uns satt macht.<br>
             Wir sind tatsächlich unsagbar dankbar über den Segen,
             auf einem Fleckchen Erde geboren worden zu sein, auf dem wir keinen Hunger leiden müssen.<br>
-            Welch GLÜCK für uns...
+            <!-- Welch GLÜCK für uns... -->
+            Viel mehr als Glück!
           </div>
         </div>
       </div>
@@ -107,7 +109,7 @@
         <img src="/imgs/geschichten/hobelbank.jpg" alt="">
         <div class="text">
           <div class="content">
-            <h3>WIE<br>URGROSSVATER JOSEFS HOBELBANK</h3>
+            <h3>WIE<br>URURROSSVATER JOSEFS HOBELBANK</h3>
             <br>
             den Weg zu uns in die Küche fand....<br>
             <br>
@@ -120,7 +122,7 @@
             Eine Werkbank gehört dahin, wo gewerkelt wird - in die Küche! <br>
             Wach geküsst, wie Dornröschen. Die SPUREN des mehr als 100 JAHRE
             alten Lebens sichtbar erhalten, hat eine Tischlerei ihre Oberfläche lebensmitteltauglich aufbereitet. <br>
-            Wo einst Uropa Josef Möbel mit dem Hobel bearbeitete und die Spähne flog, wird heute KÄSE & GEMÜSE gehobelt. <br>
+            Wo einst Jettes Ururopa Josef Möbel mit dem Hobel bearbeitete und die Spähne flog, wird heute KÄSE & GEMÜSE gehobelt. <br>
             Auf Küchenparties nimmt sie gern das Buffet auf.<br>
             Und wir freuen uns besonders, dass Sie unseren Fotografien einen ganz einzigartigen Rahmen bietet! <br>
             Welch GLÜCK für uns...
@@ -151,7 +153,7 @@
         <img src="/imgs/geschichten/waldpicknick.jpg" alt="">
         <div class="text">
           <div class="content">
-            <h3>WALDPICKNICK - Genießen unter Freunden</h3>
+            <h3>WALDPICKNICK - Geniessen unter Freunden</h3>
             <br>
             <br>
             Wir lieben den Wald direkt vor unserer Haustür! Ein Arboretum. Ein Kleinod. <br>
@@ -168,7 +170,10 @@
             <h3>WEIHNACHTEN ZU HAUSE...</h3>
             <br>
             <br>
-            ...und ich werde an Weihnachten nach Hause kommen. Wir alle tun das und sollten es tun. Für eine kurze Rast, je länger desto besser, um Ruhe zu aufzunehmen und zu geben. (Charles Dickens) <br>
+            ...und ich werde an Weihnachten nach Hause kommen.<br>
+            Wir alle tun das und sollten es tun.<br>
+            Für eine kurze Rast, je länger desto besser, um Ruhe zu aufzunehmen und zu geben. <br>
+            (Charles Dickens) <br>
             <br>
             Für Nicole ist die Weihnachtszeit die schönste Zeit des Jahres und ein bisschen ist sie es auch für Jette. WELTJAHRESBESTZEIT! Es ist die Rast in der Familie. Wir alle lieben diese besondere Zeit der Bräuche und Traditionen, der Lieder und Geschichten, des Kerzenscheins und Plätzchendufts, der Wunschzettel und Geheimnisse... Die schönste Art des Wartens ist und bleibt die VORFREUDE! <br>
             <br>
@@ -176,7 +181,48 @@
             Alle Jahre wieder haben wir tatsächlich das große GLÜCK, uns frühzeitig in einer Schonung unseren Tannenbaum aussuchen, ihn dann ein paar Tage vor Weihnachten selbst schlagen und feierlich nach Hause geleiten zu können. Alle Jahre wieder zelebrieren wir diesen Brauch gemütlich mit heißem Apfelpunsch & Glühwein, köstlichen Keksen und einer ordentlichen Portion Vorfreude auf das große Fest. Wir lieben unseren Tannenbaum! Wir lieben es, ihn gemeinsam zu schmücken, ihn zu besingen, zu bestaunen und ihm seinen Platz in unserer Mitte zu geben - mit all seinem Glanz, seiner Hoffnung, seines Friedens und seiner Freude! Auch wenn farblich viele verschiedene Konfektionen für das Kleid unseres Baumes in den Kisten warten, so schmücken wir ihn eigentlich alle Jahre wieder - skandinavisch klassisch - in rot & weiß. Und alle Jahre wieder kaufen wir ein paar ganz besondere Schmuckstücke, die uns eine Geschichte erzählen und ihn zu unserem ganz persönlichen Weihnachtsbaum machen. In diesem besonderen Jahr 2020 werden wir dankbar vier weiße Porzellan-Löffel an die Zweige hängen, wir haben allen Grund dazu: viel mehr als GLÜCK - Segen! <br>
             <br>
             <h3>WEIHNACHTSBÄCKEREI MIT OMA & OPA </h4><br>
-            Während Nicole die Kisten mit der Weihnachtsdekoration aus dem Keller holt, stöbert Jette bereits in sämtlichen Backbüchern und ihren Aufzeichnungen, welche Weihnachtsplätzchen es in diesem Jahr in die Top 10 der Keksdosen schafft. Außer Konkurrenz rangiert das Spritzgebäck von Oma und Opa auf dem allerersten Platz - und das schon, seit Nicole noch ein kleines Kind war. Eine liebgewonnene Tradition: Jette und ihr Bruder Moritz backen jedes Jahr wieder bei und mit den Großeltern für die gesamten Familien - Spritzgebäck aus 2,5 kg Mehl! Dabei wird in der Weihnachtsbäckerei ganz fortschrittlich in Arbeitsteilung gewerkelt. Während sich Oma und Jette um das Herstellen des Teigs kümmern, bringen Opa und Moritz den Fleischwolf in Position und den Backofen auf Betriebstemperatur. Die Technik ist eben Männersache! Und wenn der Teig zwei Spielrunden "Rummicub" im Kühlschrank verweilt hat, schreitet die Mannschaft zur Tat: Opa dreht den Fleischwolf, Jette und Moritz schneiden die Teigstücke ab und platzieren sie abwechselnd auf den Blechen, sorgen für Teig-Nachschub. Oma bedient Ofen und Auskühlgitter und startet bereits mit der Schokoglasur - Fließbandarbeit par Excellance! Aufgrund von Corona war dieses Jahr ein gemeinsames Backen nicht möglich, Oma & Opa haben es dieses Jahr leider allein gemacht. Unsere Freude war riesengroß, als zum ersten Advent plötzlich zwei prall gefüllte Dosen mit den "weltbesten Weihnachtsplätzchen" vor unserer Haustür standen... unerwartetes WEIHNACHTSGLÜCK! <br>
+            Während Nicole die Kisten mit der Weihnachtsdekoration aus dem Keller holt, stöbert Jette bereits in sämtlichen Backbüchern und ihren Aufzeichnungen, welche Weihnachtsplätzchen es in diesem Jahr in die Top 10 der Keksdosen schafft. Außer Konkurrenz rangiert das Spritzgebäck von Oma und Opa auf dem allerersten Platz - und das schon, seit Nicole noch ein kleines Kind war. Eine liebgewonnene Tradition: Jette und ihr Bruder Moritz backen jedes Jahr wieder bei und mit den Großeltern für die gesamten Familien - Spritzgebäck aus 2,5 kg Mehl! Dabei wird in der Weihnachtsbäckerei ganz fortschrittlich in Arbeitsteilung gewerkelt. Während sich Oma und Jette um das Herstellen des Teigs kümmern, bringen Opa und Moritz den Fleischwolf in Position und den Backofen auf Betriebstemperatur. Die Technik ist eben Männersache! Und wenn der Teig zwei Spielrunden "Rummikub" im Kühlschrank verweilt hat, schreitet die Mannschaft zur Tat: Opa dreht den Fleischwolf, Jette und Moritz schneiden die Teigstücke ab und platzieren sie abwechselnd auf den Blechen, sorgen für Teig-Nachschub. Oma bedient Ofen und Auskühlgitter und startet bereits mit der Schokoglasur - Fließbandarbeit par Excellance! Aufgrund von Corona war dieses Jahr ein gemeinsames Backen nicht möglich, Oma & Opa haben es dieses Jahr leider allein gemacht. Unsere Freude war riesengroß, als zum ersten Advent plötzlich zwei prall gefüllte Dosen mit den "weltbesten Weihnachtsplätzchen" vor unserer Haustür standen... unerwartetes WEIHNACHTSGLÜCK! <br>
+          </div>
+        </div>
+      </div>
+      <div class="geschichte">
+        <img src="/imgs/geschichten/zettelZ.jpg" alt="">
+        <div class="text">
+          <div class="content">
+            <h3>EINZIGARTIG... /ZETTEL'Z</h3>
+            <br>
+            <br>
+            Unser allerliebstes Kochbuch ist der Mittelpunkt unseres Hauses!
+
+            Ein Leben ohne essen & trinken - unmöglich. Unser Leben ohne FAMILIE & FREUNDE - ebenfalls unmöglich!<br>
+            Als wir im Jahr 2000 unser Zuhause planten, wünschten wir uns einen offenen Grundriss für ein offenes Herz.<br>
+            Folgerichtig beherbergt das Esszimmer in seiner Mitte nicht nur einen großen Esstisch, an dem gefuttert, GELACHT, gespielt, gequatscht, gefeiert... wird,
+            sondern auch die Treppe und eine über dem Tisch geöffnete Galerie, von der aus alle Zimmer im Haus zu erreichen sind.<br>
+            Die Suche nach einer das Deckenloch nicht verschließenden, vielmehr filigran schmückenden Esszimmerlampe gestaltete sich viel einfacher als wir glaubten:<br>
+            Mit Anblick der außergewöhnlichen Leuchte "Zettel'z" von Ingo Maurer war es um uns geschehen! An ihren Drähten sammeln wir seit unserem Einzug die LIEBLINGSREZEPTE
+            unserer Gäste. Tomaten-Tarte. Tex-Mex-Enchiladas. Wir lieben unsere wunderbare Edition! Einzigartig. Dank lichtresistenter Stifte dokumentiert sie über viele Jahre,
+            welch liebe Menschen bei uns ein- und ausgegangen sind. Sie liefert uns liebgewonnene Koch- und  Backanleitungen. Schließlich haben wir jede einzelne einem Praxistest
+            unterzogen und das Ergebnis mit persönlichen Sternen bewertet. So manches Rezept ist bereits zum Klassiker avanciert...<br>
+            <br>
+            Ein DICKES DANKESCHÖN an all unsere Friends'R Family für diese kostbaren GESCHENKE!<br>
+            Da wir während des Lockdowns der Corona-Pandemie leider keine Gäste empfangen durften, haben wir zu Ostern 2020 einen eigenen, ganz besonderen Zettel aufgehängt.<br>
+            "Unser Rezept gegen Corona: #WirBleibenZuhause"<br>
+            Bisher hat es geholfen. Welch GLÜCK...
+
+
+          </div>
+        </div>
+      </div>
+
+
+
+      <!-- HUNGER -->
+      <div id="hunger" class="geschichte">
+        <img src="/imgs/brett_hunger.jpg" alt="">
+        <div class="text">
+          <div class="content">
+            <h2>HUNGER ?!</h2>
+          <a href="/rezepte">Hier geht's zu den Rezepten...</a>
           </div>
         </div>
       </div>
