--- a/loeffelfreunde/index.html
+++ b/loeffelfreunde/index.html
@@ -20,7 +20,7 @@
       <a href="/leseglueck">leseglück.</a>
     </div>
     <div id="bild">
-      <span>Freude und Freunde - sooooo wichtig!</span>
+      <span>Freunde und Freude - sooooo wichtig!</span>
       <span id="mehrLesen">mehr lesen <br> <i class="fas fa-utensil-spoon"></i></span>
     </div>
     <div id="textExpand" class="closed">
@@ -42,7 +42,7 @@
             <h3>OPAS GARTEN</h3><br>
             <br>
             Alles, was unsere Genießerherzen höher schlagen lässt, wächst in Nachbars Garten. <br>
-            Unser lieber Opa HANS ist Gärtner. Gärtner mit ganz viel Herz - Bienenretter und Vogelschüzer.<br>
+            Unser lieber Opa HANS ist Gärtner. Gärtner mit ganz viel Herz - Bienenretter und Vogelschützer.<br>
             In seinem HIMMELREICH baut er alles an, was wir uns für unsere Kochideen wünschen:<br>
             In den Frühbeeten wachsen knackige Salate & gesundes Gemüse. <br>
             Tomaten-Sommer im Gewächshaus. Reines Sonnenaroma. Unzählige Büsche und Bäume liefern ZUCKERSÜSSE Früchte und KERNIGE Nüsse. Lecker.
@@ -50,7 +50,7 @@
             Auf dem Komposthaufen ranken Zucchini und Kürbisse in Herbsttönen.<br>
             Kohl in Eis & Schnee..<br>
             Ganzjährig ist mit Opa gut Kirschen essen!<br>
-            Auch, wenn er aufgrund seines Alters - Opa wird bald 80! - die Anbaufläche stetig reduziert:<br>
+            Auch, wenn er aufgrund seines Alters - Opa ist 80! - die Anbaufläche stetig reduziert:<br>
             Opas Garten DECKT UNSEREN TISCH!<br>
             Trotz kleiner Beete freuen wir uns über große Ernten. Professionelle Mischkulturen, Dünger vom Kompost und Brennessel-Sud
             gegen Schädlinge garantieren Bio-Qualität. REGIONAL & SAISONAL... <br>
@@ -69,13 +69,13 @@
             Ganz egal! Wir essen einfach gern aus Schalen: damals, heute und morgen!<br>
             <br>
             Nicole erinnert sich noch gut daran, wie sich bei ihrer Oma alle Enkelkinder rund um den großen Tisch versammelten
-            und GEMEINSAM aus der großen Schüssel oder der Pfanne aus der Mitte löffelten. Es war himmlisch, dieses Zusammengehörigkeitsgefühl!<br>
+            und GEMEINSAM aus der großen Schüssel oder der Pfanne von der Mitte des Tisches löffelten. Es war himmlisch, dieses Zusammengehörigkeitsgefühl!<br>
             Und so ist es noch heute: Gern serviert sie ein Gericht in SCHALE oder SCHÜSSEL, hat es doch gleich etwas Wohltuendes.
             HERZBERÜHRENDES. Die Hände umschließen die sanfte Form, ein einziger Blick ins Innere nimmt auf, was sich Besonderes darin
             befindet und all das hat man ganz für sich allein... <br>
             Die perfekte Harmonie der Texturen, cremig-weich, verbunden mit knackig-kernig.<br>
             Die nährstoffreichen BOWLS enthalten alles, was wir lieben: <br>
-            Kräuter, Samen, Kerne & Dressings im Frühling und Sommer,<br>
+            Kräuter, Samen, Kerne & Frische im Frühling und Sommer,<br>
             One-Pot-Gerichte, Wärme in Herbst und Winter - LÖFFELWEISE GLÜCK!
           </div>
         </div>
@@ -90,6 +90,7 @@
             Anders als die klassichen Eintopfgerichte kommen die modernen One Pots mit wenig Geschnippel und kurzen Garzeiten aus: <br>
             Ein Pott, ein paar frische, gesunde Zutaten & ein Viertelstündchen Zeit - fertig! <br>
             Dabei kann der "One Pot" ein Topf, eine Pfanne, ein Wok, ein Blech oder eine Auflaufform sein. Ein Topf für unendlich viele Möglichkeiten. Vielfalt als Programm. Sie heißen Eintopf, Suppe, Risotto, Paella, Pilaw... Herzhaft oder süß, vegan oder mit Fleisch, traditionell oder exotisch. Immer sind sie super lecker! Entscheidend sind die richtigen Mengenverhältnisse, damit Pasta und Sauce perfekt harmonieren, der Reis weich und die Suppe sämig ist. Flüssigkeit stets LÖFFELWEISE <br> nachdosieren. One Pot Wonders sind etwas für Gesundheitsbewusste und Fast-Food-Fans, für Besser-Esser und Abspülmuffel... und natürlich für Podcast-Liebhaber. Denn weil der Abwasch schnell gemacht ist, bleibt viel Zeit für schöne Geschichten aus dem Netz. Hört doch einmal hinein und setzt euch mit Thorsten Otto auf "die blaue Couch". Kurzweilige Interviews mit Sterneköchen, Winzern, Fotografen, Glücksforschern, Musikern, Rinderzüchtern, Krimiautoren, Goldgräbern, Abenteurern, <br> Schäfern, Förstern, Wiesnwirten, Brauerei-Chefinnen, Sennerinnen, Weltreisenden, Psychologen, Stylisten,.... unterhalten an Herd und Tisch. Amüsant wird's in "Fiete Gastro" - Moderator Sebastian Merget begrüßt Tim Mälzer und einen weiteren "kulinarischen" Gast, nachdem Tim ihn erraten hat. Von Jan Eißmann lernen wir im "Weinstein Podcast" viel Wissenswertes über den edlen Rebsaft, seine Beschreibungen und vielleicht sogar über unsere persönlichen Vorlieben. Zuhören und mitkochen - <br> Spitzenköchin Maria Groß und Schauspielerin Elena Uhlig laden in "Groß & Fett" zum Mitmachen ein, inspirierend... <br>
+            <br>
             Übrigens: POD steht für Play On Demand (auf Abruf abspielen). CAST ist die Abkürzung BroadCAST (Rundfunk). Die Medienbeiträge, vergleichbar mit einer Hörfunksendung, können über Mediaplayer -meist kostenlos- beliebig abgespielt werden. Es gibt sie zu vielen verschiedenen Themen. Welch GLÜCK für uns... <br>
           </div>
         </div>
@@ -98,11 +99,11 @@
         <img src="/imgs/löffelfreunde/evergreens.jpg" alt="">
         <div class="text">
           <div class="content">
-            <h3>UPDATES<br> FÜR EVERGREENS</h3><br>
+            <h3>UPDATES (oder UPGRADES?)<br> FÜR EVERGREENS</h3><br>
             <br>
             Aprikose, Ingwer, Schokolade...<br>
             <br>
-            Wer mag sie nicht, die BEWÄHRTEN Familiengerichte wie Chili Con Carne, Spaghetti Napoli, Linseneintopf...?<br>
+            Wer mag sie nicht, die BEWÄHRTEN Familiengerichte wie Chili con Carne, Spaghetti Napoli, Linseneintopf...?<br>
             Oft mit Erinnerungen verbunden, schmecken sie stets nach LIEBE und Geborgenheit! Doch manchmal haben wir große Lust,
             die KLASSIKER mit etwas Modernität zu versehen, sie mit FRISCHE & AUSSERGEWÖHNLICHEM zu pimpen:<br>
             Ein Linseneintopf schmeckt mit Aprikosen-Gremolata viel fruchtiger, die Tomatensauce mit Ingwer gesünder und
@@ -115,7 +116,7 @@
         <img src="/imgs/löffelfreunde/schokolöffel.jpg" alt="">
         <div class="text">
           <div class="content">
-            <h3>Löffelweise Weihnachtsglück</h3><br>
+            <h3>DIY Weihnachtsglück</h3><br>
             <br>
             Rezept für ganz viel Weihnachtsglück <br>
             <br>
@@ -151,6 +152,17 @@
             Weihnachtsglück-Spruch entweder mit Hand oder per Drucker auf das Papier bringen, ausschneiden, aufrollen. Löffel in die Tüte stecken, mit Schleifenband, Tannengrün und Papierrolle verschließen. <br>
             <br>
             Diese kleinen Präsente sind tolle Mitbringsel in der Weihnachtszeit, unerwartete Überraschungen für Nachbarn, Arbeitskollegen und den Postboten. Schreibt man auf die Löffel die Namen eingeladener Gäste, machen sie sich auch prima als Platzkarten. Der Espresso zum Nachtisch erhält beim Umrühren einen mit Liebe zubereiteten Flavour. <br>
+          </div>
+        </div>
+      </div>
+
+      <!-- HUNGER -->
+      <div id="hunger" class="item">
+        <img src="/imgs/brett_hunger.jpg" alt="">
+        <div class="text">
+          <div class="content">
+            <h2>HUNGER ?!</h2>
+          <a href="/rezepte">Hier geht's zu den Rezepten...</a>
           </div>
         </div>
       </div>
