--- a/nicole_jette/index.html
+++ b/nicole_jette/index.html
@@ -35,37 +35,30 @@
           <div class="content">
             <h3>JETTE ÜBER NICOLE:</h3>
              <br>
-            Was mir spontan zu Mama einfällt? <br>
-            Familienmensch. Kopf voller Ideen. Krümelmonster. <br>
+             Was mir spontan zu Mama einfällt?<br>
+             Familienmensch. Kopf voller Ideen. Krümelmonster. <br>
              <br>
              <br>
-            <h3>FRIENDS'R FAMILY. DETAILVERLIEBTE. WALDFEE.</h3>
+            <h3>FRIENDS'R FAMILY. DETAILVERLIEBTE. CHUTNEYKÖCHIN.</h3>
              <br>
              <br>
-            Mama ist ein totaler Familienmensch. Für ihre Lieben tut sie einfach alles, vor allen Dingen superlecker kochen! <br>
-            Kleine Dinge mit großer Liebe tun - so geht sie durch's Leben, gern durch den Wald. Detailverliebt. Zu einem guten Essen gehört immer auch ein liebevoll gedeckter Tisch. <br>
-            Stets am Optimum, der Perfektion orientiert. Bei der Zubereitung von Essen bedeutet dies viele Vitamine aus Obst und Gemüse, maximale Frische und Bio-Qualität. <br>
-            (Toll, dass Opa uns aus seinem Garten versorgt!)Fertiggerichte sind tabu. Nach dem Essen heißt dies für Mama: nichts verkommen lassen oder wegschmeißen! <br>
-            Aus Lebensmittel-Resten zaubert sie Eintöpfe, Ketchup und Chutneys. Dabei kommt sie auf völlig skurile Kombinationen: <br>
-            Erdbeer mit rosa Pfeffer, Aprikose-Lavendel, Ananas-Rosmarin oder Birne-Thymian (übrigens Mama's Lieblingskraut!). Phantastisch! <br>
+            Mama ist ein totaler Familienmensch. Für ihre Lieben tut sie einfach alles, vor allen Dingen super lecker kochen! Kleine Dinge mit großer Liebe tun - so geht sie durch's Leben, gern durch den Wald. <br>
+            Detailverliebt. Zu einem guten Essen gehört immer auch ein liebevoll gedeckter Tisch. <br>
+            Stets am Optimum, der Perfektion orientiert. Bei der Zubereitung von Essen bedeutet dies viele Vitamine aus Obst und Gemüse, maximale Frische und Bio-Qualität. Fertiggerichte sind tabu. Nach dem Essen heißt dies für Mama: nichts verkommen lassen oder wegschmeißen! Aus Lebensmittel-Resten zaubert sie Eintöpfe, Ketchup und Chutneys. Dabei kommt sie auf völlig skurile Marmeladen-Kombinationen: Erdbeer mit rosa Pfeffer, Aprikose-Lavendel, Ananas-Rosmarin oder Birne-Thymian.<br> Phantastisch!  <br>
              <br>
              <br>
-            <h3>WESTFÄLISCHER APFELWURM. RENNRADLERIN. LATTE MACCHIATORIN.</h3> <br>
+            <h3>WESTFÄLISCHER APFELWURM. RENNRADLERIN.<br> LATTE MACCHIATORIN.</h3> <br>
              <br>
              <br>
-            Mama's Kreativität scheint tatsächlich unerschöpflich zu sein! Deshalb ist sie auch immer in Bewegung. Anders könnte sie ihre vielen Ideen im Alltag gar nicht unterbringen! Ruhe und Entspannung und den nötigen Ausgleich zum Job in der Bank findet sie nur, wenn ihre Hände einen Latte Macchiato umschließen, <br>
-            sie in ihren wunderschönen Kochbüchern blättert - dann sieht sie richtig glücklich aus. Ich könnte sie stundenlang beobachten... <br>
-            Freitags fährt Mama schon früh zum Wochenmarkt, mit dem Fahrrad natürlich. Wenn sie auch sonst gern mit dem Rennrad unterwegs ist: <br>
-            für den Ausflug zum Markt braucht sie unbedingt Lenkerkörbchen und Gepäckträger! Denn: Entzückt von der bunten Auswahl an ihren Lieblingsständen kauft sie IMMER mehr als sie sich vornimmt (zum Leidwesen von uns Kindern gibt es dann anstatt süßer Leckereien wieder tagelang gesundes Gemüse ;-) ..)! <br>
-            Und Mama liebt Äpfel! Ins Müsli, auf den Kuchen, in den Eistee (selbstgemacht, versteht sich), in die Suppe... <br>
-            "One apple a day.." Dieses Sprichwort muss einfach stimmen, denn Mama ist einfach immer fit. <br>
+             Mamas Kreativität scheint tatsächlich unerschöpflich zu sein! Deshalb ist sie auch immer in Bewegung. Anders könnte sie ihre vielen Ideen im Alltag gar nicht unterbringen! Ruhe, Entspannung und Ausgleich zum Job in der Bank findet sie nur, wenn ihre Hände einen Latte Macchiato umschließen, unbedingt einen Keks dazu, und sie in ihren wunderschönen Kochbüchern blättert - dann sieht sie richtig glücklich aus... <br>
+             Freitags fährt Mama schon früh zum Wochenmarkt, mit dem Fahrrad natürlich. Wenn sie auch sonst gern mit dem Rennrad unterwegs ist: für den Ausflug zum Markt braucht sie unbedingt Lenkerkörbchen und Gepäckträger! Denn: Inspiriert von der bunten Auswahl an ihren Lieblingsständen kauft sie IMMER mehr als sie sich vornimmt (zum Leidwesen von uns Kindern gibt es dann anstatt süßer Leckereien wieder nur gesundes Gemüse...)! Und Mama liebt Äpfel! Ins Müsli, auf den Kuchen, in den Eistee (selbstgemacht, versteht sich), in die Suppe... "An apple a day.." <br>
              <br>
              <br>
             <h3>MACHERIN. FJORDFAN. HAPTIKERIN.</h3>
              <br>
-            Immer von ihren Ideen getrieben. Sie macht einfach. Und was sie macht, macht sie ganz. Neu entdeckte Leidenschaft: Foodfotografie. Natürlich ist sie kein Profi - das weiß sie auch! -, aber ich finde, sie hat schon voll den Blick dafür. Findet ihr nicht auch? Ehrgeizig wie sie ist, will sie 'mal Kurse besuchen.. <br>
-            Welches Food wir immer im Kühlschrank haben? Käse! Parmesan und Ziegenkäse zum Kochen. Weich- und Bergkäse zum Mampfen, zu Mama's Chutneys und EINEM edlen Glas Wein (mehr verträgt sie nämlich nicht ;-) ). Ich mag ja total gern Gouda, am allerliebsten den echten aus Holland, und zum Glück bringen wir von unseren Segelurlauben immer ordentlich Vorrat mit. Wenn Mama aber träumt, dann ist sie in Gedanken am Fjord in Norwegen, glaube ich. Im Herzen liebt sie dort die unberührte Natur, <br> mag die schlichte Mode und die Echtheit der in Skandinavien verarbeiteten Materialien. Porzellan. Holz. Leinen. Getöpfert. Gedrechselt. Gewebt. Edle Gefährten an Herd und Tisch. Nichts macht Mama lieber als sich mit schönen Dingen zu umgeben - außer für ihre Familie und ihre vielen Freunde zu kochen
-            und sie löffelweise zu verwöhnen! Welch Glück für uns...
+             Immer von ihren Ideen getrieben. Sie macht einfach. Und was sie macht, macht sie ganz. Neu entdeckte Leidenschaft: Foodfotografie. Natürlich ist sie kein Profi - das weiß sie auch! -, aber ich finde, sie hat schon voll den Blick dafür. Ehrgeizig wie sie ist, will sie 'mal Kurse besuchen.. <br>
+             Was Mama immer im Kühlschrank hat? Käse! Parmesan und Ziegenkäse zum Kochen. Weich- und Bergkäse zum Mampfen, zu ihren Chutneys und einem Gläschen Wein. Ich mag ja total gern Gouda, am allerliebsten den echten aus Holland, und zum Glück bringen wir von unseren Segelurlauben stets einen ordentlichen Vorrat mit. Wenn Mama aber träumt, dann ist sie in Gedanken am Fjord in Norwegen, glaube ich. Im Herzen liebt sie dort die unberührte Natur, mag die schlichte Mode und die Echtheit der <br> in Skandinavien verarbeiteten Materialien. Porzellan. Holz. Leinen. Getöpfert. Gedrechselt. Gewebt.
+             Edle Gefährten an Herd und Tisch. Nichts macht Mama lieber, als sich mit schönen Dingen zu umgeben - außer für ihre Familie und ihre vielen Freunde zu kochen und sie löffelweise zu verwöhnen! Welch Glück für uns...
           </div>
         </div>
       </div>
@@ -75,30 +68,50 @@
           <div class="content">
             <h3>NICOLE ÜBER JETTE:</h3>
             <br>
-            Was mir spontan zu Jette einfällt?  <br>
-            Musikverrückte. Sonnenschein. Schokomund. <br>
+            Was mir spontan zu Jette einfällt?<br>
+            Musikverrückte. Sonnenschein. Schokomund.  <br>
             <br>
             <h3>ZUCKERBÄCKERIN. GENIESSERIN. UNIQUE.</h3>
             <br>
-            Jette ist ein absolut positiver Mensch, ein Sonnenschein. Das war sie schon als Baby - egal, wann und wie man sie weckte, immer lächelte sie und strahlte mit ihren großen blauen Kulleraugen. Mit kesser Fröhlichkeit spaziert sie durch ihr Leben. Stets dabei: Musik! Wo sie geht, wo sie steht summt, singt oder tanzt Jette. <br>
-            Man könnte fast glauben, selbst das Schlagen des Schneebesens gibt ihr einen Takt zum Mitmachen vor. Vielleicht backt sie deshalb so gern.  <br>
-            Jette spielt Klavier und Trompete und versucht sich am Schlagzeug. Ihre größte Leidenschaft aber ist das Tanzen. Mit ihrer Formation UNIQUE kämpft sie um Hip-Hop-Titel.  <br>
-            Gern verwöhnt sie ihre Mannschaft mit kleinen Leckereien. Herzhaft oder sweet. Jette ist die Königin der Muffinform. Hierin schiebt sie alles in den Ofen, was ihr in den Sinn kommt. <br>
+            Jette ist ein durchweg positiver Mensch, ein Sonnenschein. Das war sie schon als Baby - egal, wann und wie man sie weckte, immer lächelte sie und strahlte mit ihren <br>
+            großen blauen Kulleraugen. Mit kesser Fröhlichkeit spaziert sie durch ihr Leben. Stets dabei: Musik! Wo sie geht, wo sie steht summt, singt oder tanzt Jette.  <br>
+            Man könnte fast glauben, selbst das Schlagen des Schneebesens gibt ihr einen Takt zum Mitmachen vor. Vielleicht backt sie deshalb so gern. <br>
+            Jette spielt Klavier und Trompete und versucht sich am Schlagzeug. Ihre größte Leidenschaft aber ist das Tanzen. Mit ihrer Formation UNIQUE kämpft sie um Hip-Hop-Titel. <br>
+            Gern verwöhnt sie ihre Mannschaft mit kleinen Leckereien. Herzhaft oder sweet. Jette ist die Königin der Muffinform. Hierin schiebt sie alles in den Ofen, <br>
+            was ihr in den Sinn kommt.<br>
             <br>
-            <h3>EHRGEIZIGE. NASCHKATZE. NEUGIERIGE. CHILI & PEPPER. </h3>
+            <h3>EHRGEIZIGE. NEUGIERIGE. CHILI & PEPPER. </h3>
             <br>
-            Neugierig wagt sie sich an allerhand neue Rezepte und experimentiert an eigenen Kreationen. Nur eines müsst Ihr wissen: Ein Kuchen ohne Schokolade ist für Jette kein Kuchen! Passionierte Naschkatze und Zuckerbäckerin. Süß geht immer. Es gibt soooo viele schöne Fotos, die Jette mit blonden Locken und Schokomund zeigen... <br>
-            Wenn ihr aber glaubt, dass Jette auch auf "scharf" steht, war ihr nicht mit ihr in Thailand! Chili & Pepper heißen unsere Zwergkaninchen. Sie sind sehr zutraulich. <br>
-            Durch ihre Tolpatschigkeit bringen sie uns immer wieder zum Lachen. Ein tolles Kinoprogramm zur Sommerzeit. Immer freuen sie sich über unsere Gemüseabfälle aus der Küche. Zum Kartoffel schälen und Möhren schrappen setzt sich Jette heute zwar nicht mehr auf die Arbeitsplatte, aber das stumpfe Messer als Relikt vergangener Tage gibt es noch immer. Es ist geblieben wie Jettes Leidenschaft zum Kochen und Backen! <br>
+            Neugierig wagt sie sich an allerhand neue Rezepte und experimentiert an eigenen Kreationen. Nur eines müsst Ihr wissen: Ein Kuchen ohne Schokolade ist  <br>
+            für Jette kein Kuchen! Passionierte Naschkatze und Zuckerbäckerin. Süß geht immer. Es gibt soooo viele schöne Fotos, die Jette mit blonden Locken und Schokomund zeigen... <br>
+            Wenn ihr aber glaubt, dass Jette auch auf "scharf" steht, ward ihr nicht mit ihr in Thailand! Chili & Pepper heißen unsere Zwergkaninchen. Sie sind sehr zutraulich.  <br>
+            Durch ihre Tolpatschigkeit bringen sie uns immer wieder zum Lachen. Ein tolles Kinoprogramm zur Sommerzeit. Stets freuen sie sich über unsere Gemüseabfälle aus der  <br>
+            Küche. Zum Kartoffel schälen und Möhren schrappen setzt sich Jette heute zwar nicht mehr auf die Arbeitsplatte, aber das stumpfe Messer als Relikt vergangener Tage  <br>
+            gibt es noch immer. Es ist geblieben wie Jettes Leidenschaft zum Kochen und Backen!<br>
             <br>
-            <h3>LESERATTE. KREATIVISTIN. ZAHLENMEISTERIN.</h3>
+            <h3>LESERATTE. KREATIVISTIN. ZAHLENMEISTERIN. </h3>
             <br>
-            Lesen. Ein Muss. Jette liebt Bücher. Die Harry-Potter-Bände hat sie verschlungen, wie die Schokotorte, die zu jedem ihrer Geburtstage ein Muss ist. Rezepte aus der Zauberküche haben wir bisher noch nicht gekocht, aber für kleine Kesselkuchen, eine Siruptorte, Muffin-Eulen und Hackbällchen mit Preiselbeer-Dip haben wir bereits Ideen.  <br>
-            Jette strotzt vor Kreativität. Malen. Basteln. Fotografieren. Auf ihre selbstgebastelten Geschenke freue ich mich seit sie klein ist. Ihre selbstgemachten Pralinen sind ein Traum. Kaminkonfekt. Im völligen Gegensatz dazu steht ihre Gabe zum logischen Denken. Plutimikation. Als ob die Schultüte ihren Weg bestimmte. <br>
+            Lesen. Ein Muss. Jette liebt Bücher. Die Harry-Potter-Bände hat sie verschlungen, wie die Schokotorte, die zu jedem ihrer Geburtstage ein Muss ist. <br>
+            Rezepte aus der Zauberküche lieben wir. Die Schnee-Eule Hedwig und ihre Freunde sind uns jedoch in den Schokotopf geplumpst. Für kleine Kesselkuchen, <br>
+            eine Siruptorte und Hackbällchen mit Preiselbeer-Dip haben wir bereits neue Ideen.<br>
+            Jette strotzt vor Kreativität. Malen. Basteln. Fotografieren. Auf ihre selbstgebastelten Geschenke freue ich mich, seit sie klein ist. Ihre selbstgemachten Pralinen <br>
+            sind ein Traum. Kaminkonfekt. Im völligen Gegensatz dazu steht ihre Gabe zum logischen Denken. Plutimikation. Als ob die Schultüte ihren Weg bestimmte. <br>
             Mit Maßeinheiten kennt sie sich nicht nur in der Küche aus, aber eben auch - Löffel für Löffel. Welch GLÜCK für uns!
           </div>
 
 
+        </div>
+      </div>
+
+
+      <!-- HUNGER -->
+      <div id="hunger" class="item">
+        <img src="/imgs/brett_hunger.jpg" alt="">
+        <div class="text">
+          <div class="content">
+            <h2>HUNGER ?!</h2>
+          <a href="/rezepte">Hier geht's zu den Rezepten...</a>
+          </div>
         </div>
       </div>
     </div>
