--- a/rezepte/index.html
+++ b/rezepte/index.html
@@ -38,27 +38,6 @@
       Gern lassen wir euch an unseren Rezepten teilhaben und freuen uns, wenn ihr sie selbst ausprobiert. <br>
       Viel Spaß dabei und lasst es euch schmecken! Genießt euer eigenes LÖFFELWEISE GLÜCK...
     </div>
-    <div id="recipeContainer">
-
-      <div class="recipe">
-        <img src="/imgs/rezepte/rezeptbilder/tomatenmarmelade.jpg" alt="">
-        <div class="text">
-          <h3>Tomaten-Marmelade</h3>
-          <a href="#">Rezept zum Löffelglück...</a>
-          <div class="tags">
-            <a href="#">#Marmelade</a>
-            <a href="#">#Tomaten</a>
-          </div>
-        </div>
-      </div>
-
-      <div class="recipe">
-        <img src="/imgs/rezepte/rezeptbilder/tomatenmarmelade.jpg" alt="">
-        <div class="text">
-          Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-        </div>
-      </div>
-
-    </div>
+    <div id="recipeContainer"></div>
   </body>
 </html>
