Zettel'Z aus Titel entfernt

--- a/geschichten/index.html
+++ b/geschichten/index.html
@@ -189,7 +189,7 @@
         <img src="/imgs/geschichten/zettelZ.jpg" alt="">
         <div class="text">
           <div class="content">
-            <h3>EINZIGARTIG... /ZETTEL'Z</h3>
+            <h3>EINZIGARTIG...</h3>
             <br>
             <br>
             Unser allerliebstes Kochbuch ist der Mittelpunkt unseres Hauses!
