Rezept-Suchleiste hinzugefügt, Caprese & Mascarpone Torte hinzugefügt

--- a/nicole_jette/index.html
+++ b/nicole_jette/index.html
@@ -103,6 +103,74 @@
         </div>
       </div>
 
+      <div class="item">
+        <img src="/imgs/geschichten/homemade.jpg" alt="">
+        <div class="text">
+          <div class="content">
+            <h3>EST. 2020</h3><br>
+            <br>
+            Kennst du das? Du hast eine IDEE. Aus der Situation heraus stellen sich Fragen. Auf der Suche nach Antworten erhältst du neue INSPIRATIONEN.
+            Gedanken verselbstständigen sich. Die kleine Idee wird groß und größer. Die FREUDE in dir wächst! <br>
+            <br>
+            So war es auch mit unserem BLOG. <br>
+            <br>
+            Entstanden als sinnbringende Beschäftigung in der #WirBleibenZuhause-Corona-Zeit. Bei aller Sorge um Gesundheit, Familie, Schule, Job freuten wir uns aber auch
+            über die GESCHENKTE ZUSAMMENZEIT. Wir freuten uns auf spielen, lesen, lachen... und auf KOCHEN & BACKEN!  <br>
+            <br>
+            "Eine gute Küche ist das Fundament jeden Glücks." <br>
+            (Auguste Escoffier, Guide Culinaire 1847- 1935) <br>
+            <br>
+            Wir hatten richtig Lust, neue Rezepte auszuprobieren, zu experimentieren und uns gegenseitig mit LECKEREIEN zu verwöhnen. ALLES HOMEMADE!
+            Weil viele tolle Gerichte gelangen, sooooooo lecker schmeckten, war schnell die Idee entstanden, unsere Kreationen auf Instagram zu posten:
+            WIR machten viele schöne Fotos, wollten erst einmal sammeln.... <br>
+            <br>
+            Im Herbst dann die Fragen: Wie sieht eigentlich ein Insta-Foodblog aus? Wie funktioniert er? Wie finden Foto und Rezept zusammen?
+            Geflashed von den großartigen Seiten vieler Blogger, von den Events, die wir entdeckten, von den Communities, die sich gefunden hatten,
+            verspürten wir ebenfalls den Wunsch, nicht nur quadratische Fotografien auf Instagram zu posten, sondern eine RICHTIGE Internetseite zu gestalten.
+            Gedanken verselbstständigten sich. Die kleine Idee wurde groß und größer. Die Freude in uns wuchs, denn nun hatten wir auch unsere Männer Moritz (Sohn & Bruder)
+            und Thorsten (Ehemann & Vater) infiziert. Ein kostbares Familienprojekt: Moritz programmiert, Thorsten baut kleine Kulissen.
+            Entlohnt wird in Naturalien: LÖFFELWEISE GLÜCK! <br>
+            <br>
+            Wir erheben keinen Anspruch auf Professionalität, haben einfach Spaß! Die gemeinsame Zeit genießen wir!
+            Gespannt sind wir auf das, was sich aus unserem kleinen Projekt - EST. 2020 - entwickeln wird...
+          </div>
+        </div>
+      </div>
+      <div class="item">
+        <img src="/imgs/geschichten/löffel_glück.jpg" alt="">
+        <div class="text">
+          <div class="content">
+            <h3>DARUM...</h3>
+            <br>
+            ...konnte es kein anderer Name für unseren Blog sein...<br>
+            <br>
+            Der Löffel ist für uns der Inbegriff eines jeden Esswerkzeugs - abmessen, rühren und GENIESSEN.
+            Zu allen Zeiten, in allen Kulturen, auf allen Kontinenten gibt es den Löffel. <br>
+            Neben Messer und Gabel, Stäbchen. <br>
+            Mit einem Löffel kann man essen, auch, wenn einem die Gabel fehlt.
+            Der Löffel begleitet uns UNSER GANZES LEBEN: <br>
+            Kleine Kinder starten mit ihm die ersten Versuche der Nahrungsaufnahme
+            und am Ende geben wir ihn ab, den Löffel.<br>
+            <br>
+            Essbares "löffelweise" zu konsumieren,
+            drückt für uns eine ganz besondere WERTSCHÄTZUNG der Nahrung gegenüber aus: <br>
+            Nicht unmäßiges Verschlingen, gieriges Verschwenden,
+            sondern respektvoller Genuss, achtsame Portionierung. <br>
+            Das entspricht unserem Umgang mit Lebensmitteln.<br>
+            <br>
+            Mit dem Wort "Glück" verbinden wir wunderbar kostbare Gefühle und positive Gedankenbilder.
+            Immerzu wünschen wir uns diese angenehm freudige Gemütsverfassung, diese Hochstimmung.<br>
+            Essen macht glücklich! <br>
+            Essen macht nicht nur glücklich, weil es lecker schmeckt,
+            sondern auch, weil es uns satt macht.<br>
+            Wir sind tatsächlich unsagbar dankbar über den Segen,
+            auf einem Fleckchen Erde geboren worden zu sein, auf dem wir keinen Hunger leiden müssen.<br>
+            <!-- Welch GLÜCK für uns... -->
+            Viel mehr als Glück!
+          </div>
+        </div>
+      </div>
+
 
       <!-- HUNGER -->
       <div id="hunger" class="item">
