--- a/rezepte/tomaten-marmelade/index.html
+++ b/rezepte/tomaten-marmelade/index.html
@@ -9,12 +9,12 @@
   </head>
   <body>
     <div id="navbar">
-      <a href="..">Zurück zu den Rezepten</a>
+      <a href=".." id="back">Zurück zu den Rezepten</a>
       <h3 id="name"></h3>
     </div>
     <div id="container">
       <div id="zutaten">
-        
+
       </div>
       <div id="zubereitung">
 
