--- a/rezepte/zitronenkuchen-grüne-wiese/index.html
+++ b/rezepte/zitronenkuchen-grüne-wiese/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <div id="navbar">
-      <a href="..">Zurück zu den Rezepten</a>
+      <a href=".." id="back">Zurück zu den Rezepten</a>
       <h3 id="name"></h3>
     </div>
     <div id="container">
