--- a/leseglueck/index.html
+++ b/leseglueck/index.html
@@ -50,9 +50,9 @@
             Saskia studierte zwar Betriebswirtschaftslehre, arbeitet heute jedoch als Ernährungsberaterin in Hamburg. Ihre unerschöpfliche Kreativität lebt sie mit der Entwicklung von Rezepten aus und schreibt mit Leidenschaft in ihrem Food-Blog "Dee's Küche", der ursprünglich als Kochbuch für ihre erwachsenen Kinder gedacht war. <br>
 
             Vera hat als Grafikdesignerin und Dozentin bereits viele unterschiedliche Buch- und Magazinkonzepte erarbeitet und bis zum Druck begleitet. Sie lebt in Köln, reist aber gern in warme Länder. Trotzdem wird sie gern über Nacht von weißem Schnee überrascht, sieht doch dann alles so friedlich aus... <br>
-
+            <br>
             <h3>BUCHAUFBAU</h3>
-
+            <br>
             Weiß wie Schnee ist die vorherrschende Farbe des Buches nicht nur auf dem Cover, sondern auch auf jeder künstlerisch gestalteten Innenseite. Die Fotos aus Lappland zeigen frostige Landschaften, mit Schnee gepuderte Tannen, eingeschneite Hütten, Rentiere und ihre Schlitten. Das Food wird stets mit weißem Geschirr auf weißem Hintergrund präsentiert. Auch liebevoll arrangierte Stillleben greifen die Farbe Weiß auf. Sie bestimmt die Stimmung des Buches - hell, festlich, friedlich. Ein <br> Buch, um zur Ruhe zu kommen und vielfältige Leckereien des Winter zu probieren. <br>
 
             1. VORWORT: Über leise fallende Flocken, taube Zehen & eingefrorene Nasen. Eiskristalle glitzern. Ein Wintermärchen. Entschleunigung. Natur im Winterschlaf. <br>
@@ -67,17 +67,28 @@
 
             Rezepte <br>
             Die Rezepte sind sehr übersichtlich aufgebaut. Eine Zutatenliste, Zubereitungszeit, Koch- und Backzeit und Portionsgröße geben einen guten Überblick, die Zubereitungsschritte sind nachvollziehbar formuliert und ermöglichen auch Kochanfängern ein gutes Gelingen. Auch ein Tipp für die Abwandlung oder Präsentation ist bei vielen Rezepten vorhanden. <br>
-
+            <br>
             <h3>NACHGEKOCHT / LÖFFELTEST</h3>
-
+            <br>
             Besonders für Jette war schnell klar, dass wir etwas Besonderes mit Schokolade zubereiten wollen. Die Wahl fiel auf die "Schokoladenmuffins mit cremigen Kern". Bereits beim Schlecken des Teigs war Jette hin und weg von der Vollmundigkeit des Aromas und der Konsistenz der Rohware. Lauwarm probiert mit einem Löffelchen Vanille-Eis und einem Schlag Sahne war die Geschmacksexplosion perfekt! Anders als im Buch präsentieren wir unseren Schokomuffin in black & nicht in white... <br>
 
             Noch viele weitere Rezepte haben es uns angetan und zu eigenen Kreationen inspiriert: der Apfelburger, das Chili, die gebrannten Mandeln & Nüsse... <br>
-
-            FAZIT <br>
-
-            "Hello Snow"ist ein besonderes Buch für den Winter. Mit beeindruckenden Fotos, schönen Texten und leckeren Rezepten feiert es den Winter. Es macht Lust darauf, sich im warmen Zuhause einzukuscheln, um dort zu "Kochen. Lesen. Genießen." <br>
+            <br>
+            <h3>FAZIT</h3>
+            <br>
+            "Hello Snow"ist ein besonderes Buch für den Winter. Mit beeindruckenden Fotos, schönen Texten und leckeren Rezepten feiert es die kalte Jahreszeit. Es macht Lust darauf, sich im warmen Zuhause einzukuscheln, um dort zu "Kochen. Lesen. Genießen." <br>
             Diese Rezension stellt ganz allein unseren persönlichen Eindruck und unsere eigene Meinung dar. <br>
+          </div>
+        </div>
+      </div>
+
+      <!-- HUNGER -->
+      <div id="hunger" class="item">
+        <img src="/imgs/brett_hunger.jpg" alt="">
+        <div class="text">
+          <div class="content">
+            <h2>HUNGER ?!</h2>
+          <a href="/rezepte">Hier geht's zu den Rezepten...</a>
           </div>
         </div>
       </div>
