--- a/nicole_jette/index.html
+++ b/nicole_jette/index.html
@@ -104,7 +104,7 @@
       </div>
 
       <div class="item">
-        <img src="/imgs/geschichten/homemade.jpg" alt="">
+        <img src="/imgs/nicole_jette/homemade.jpg" alt="">
         <div class="text">
           <div class="content">
             <h3>EST. 2020</h3><br>
@@ -137,7 +137,7 @@
         </div>
       </div>
       <div class="item">
-        <img src="/imgs/geschichten/löffel_glück.jpg" alt="">
+        <img src="/imgs/nicole_jette/löffel_glück.jpg" alt="">
         <div class="text">
           <div class="content">
             <h3>DARUM...</h3>
@@ -167,6 +167,37 @@
             auf einem Fleckchen Erde geboren worden zu sein, auf dem wir keinen Hunger leiden müssen.<br>
             <!-- Welch GLÜCK für uns... -->
             Viel mehr als Glück!
+          </div>
+        </div>
+      </div>
+      <div class="item">
+        <img src="/imgs/nicole_jette/antrieb.jpg" alt="">
+        <div class="text">
+          <div class="content">
+            Auf dem (Küchen)BODEN der Tatsachen liegt eindeutig zu wenig <br>
+            <br>
+            <h3>GLITZER...</h3>
+            <br>
+            Unser Glitzer sind GUTE ZUTATEN! Wir achten sehr genau darauf, woher unsere Lebensmittel stammen. Gemüse ernten wir natürlich am liebsten in Opas Garten. Für alles andere schätzen wir kurze Wege und persönliche Kontakte. Das ist das Wunderbare auf dem Land - man kennt sich! Wir wissen, wo und wie die Tiere leben, die wir verzehren, können sie jederzeit besuchen LINK BIOLAND HARTMANN. Eier gibt's im HOFLADEN LINK WILDHÄUSER HOF. Artgerechte Haltung. Stammen die Fische nicht aus Nachbars Forellenteich, achten wir auf Labels für nachhaltige Fischerei. Auch kleine Käsereien garantieren Vielfalt und Frische. LINK SCHAUKÄSEREI MENNE: JAKOBSBERGER MILCHHANDWERKER. Aus der Ölmühle am Solling beziehen wir tolle, selbstgepresste Öle LINK ÖLMÜHLE SOLLING und viele Hobby-Imker zählen zu unseren Freunden. Gemüse kaufen wir gern auf dem Wochenmarkt oder bei unserem Bio-Bauern vor Ort LINK BRAKELER GEMÜSE; ENGEMANN. Aus REGIONAL folgt SAISONAL! Exotische Zutaten sind bei uns eher die Ausnahme.
+
+            Die Zubereitung von Essen ist für Nicole nicht nur eine Herzensangelegenheit, es ist eine HALTUNG. Den Respekt Pflanzen und Tieren gegenüber, die Wertschätzung von Mutter Erde möchte sie gern an Jette und Moritz weitergeben. Das ist ihr großer Antrieb.<br>
+            <br>
+            <h3>FUNKENSPRÜHEN. STERNEKÜCHE.</h3>
+            <br>
+            Wir sprühen über vor lauter Ideen! Plötzlich haben wir sie einfach im Kopf, die Rezepte! Dann wird ausprobiert. INSPIRIERT sind sie natürlich der saisonalen Ernte oder dem Heißhunger der Familie... Aber auch das abendfüllende Blättern in Kochbüchern und -zeitschriften liefert allerhand Anregungen. In Kombination mit alten FAMILIENREZEPTEN von Oma finden wir immer etwas, das uns schmeckt. GEMEINSAM diskutieren wir dann über die Anzahl der Sterne, die wir dem Ergebnis verleihen. Mit diesem Blog ist unsere kleine, private Sternenküche nun nicht mehr so klein und privat - alle hier präsentierten Rezepte haben vom Familienrat drei bis fünf Sterne erzielt.
+
+            Wir hoffen, Du hast viel Spaß auf unserer Seite, findest das eine oder andere Rezept, das Dir gefällt, eine Anregung, die inspiriert und vielleicht schaust Du ab und zu einmal vorbei. Wir freuen uns über jeden Kommentar, jede Kritik, besonders natürlich über ein winziges Lob und wünschen viel FREUDE BEIM STÖBERN - wir wünschen von Herzen LÖFFELWEISE GLÜCK!<br>
+            <br>
+            Jette & Nicole <br>
+            <br>
+
+            <a href="mailto:lecker@loeffelweise-glueck.de">lecker(at)loeffelweise-glueck.de</a> <br>
+            <a href="instagram.com/loeffelweise.glueck" target="_blank">instagram.com/loeffelweise.glueck</a><br>
+            <!-- pinterest.com/loeffelweise-glueck <br>
+            facebook.com/loeffelweise-glueck -->
+
+
+
           </div>
         </div>
       </div>
