--- a/geschichten/index.html
+++ b/geschichten/index.html
@@ -45,7 +45,7 @@
             <h3 style="display: inline; font-family: sans-serif">#</h3><h3 style="display: inline;">WirBleibenZuhause</h3><br>
             <div style="margin-top: 1cm; font-size: 1.5rem;">
               Gemeinsam kriegen wir alles gebacken... <br>
-            Wir wünschen ein glückliches Jahr 2021.
+            Wir wünschen ein gesundes & glückliches Jahr 2021.
             </div>
 
           </div>
@@ -55,7 +55,7 @@
         <img src="/imgs/geschichten/hobelbank.jpg" alt="">
         <div class="text">
           <div class="content">
-            <h3>WIE<br>URURROSSVATER JOSEFS HOBELBANK</h3>
+            <h3>WIE URUROPA JOSEFS HOBELBANK</h3>
             <br>
             den Weg zu uns in die Küche fand....<br>
             <br>
@@ -68,7 +68,7 @@
             Eine Werkbank gehört dahin, wo gewerkelt wird - in die Küche! <br>
             Wach geküsst, wie Dornröschen. Die SPUREN des mehr als 100 JAHRE
             alten Lebens sichtbar erhalten, hat eine Tischlerei ihre Oberfläche lebensmitteltauglich aufbereitet. <br>
-            Wo einst Jettes Ururopa Josef Möbel mit dem Hobel bearbeitete und die Spähne flog, wird heute KÄSE & GEMÜSE gehobelt. <br>
+            Wo einst Jettes Ururgroßvater Josef Möbel mit dem Hobel bearbeitete und die Spähne flog, wird heute KÄSE & GEMÜSE gehobelt. <br>
             Auf Küchenparties nimmt sie gern das Buffet auf.<br>
             Und wir freuen uns besonders, dass Sie unseren Fotografien einen ganz einzigartigen Rahmen bietet! <br>
             Welch GLÜCK für uns...
@@ -79,19 +79,19 @@
         <img src="/imgs/geschichten/lavendel.jpg" alt="">
         <div class="text">
           <div class="content">
-            <h3>Heimatliebe - Petite Provence in Ostwestfalen</h3>
+            <h3>Heimatliebe - <br>Petite Provence in Ostwestfalen</h3>
             <br>
             <br>
-            Immer wieder gern starten wir im Juli zu einem Ausflug in die HEIMISCHEN Lavendelfelder - manchmal sogar mit dem Fahrrad.  <br>
+            Immer wieder gern starten wir im Juli zu einem Ausflug in die HEIMISCHEN Lavendelfelder - manchmal sogar mit dem Fahrrad.
             Der Duft der blauen Blumen verzaubert uns. Wir fühlen uns wie GOTT IN FRANKREICH. Stundenlang sitzen wir auf der angrenzenden Wiese und GENIESSEN den Blick in die LILA LANDSCHAFT. Ein Traum.  <br>
-            An einer zum Verkaufsladen umgebauten Ape stöbern wir nach allerlei hübschen und nützlichen - aus LAVENDEL hergestellten - Kleinigkeiten:  <br>
+            An einer zum <a href="https://taoasis.com/" target="_blank">Verkaufsladen</a> umgebauten Ape stöbern wir nach allerlei hübschen und nützlichen - aus LAVENDEL hergestellten - Kleinigkeiten:
             Öl, Tee, Seife, Mückenstift, Wäschesäckchen... Soooooo schööööön! <br>
-            Was wir manchmal echt vermissen: köstliches französches Essen - Tarte, Cidre, Galettes, ein guter Wein.... <br>
-            Bis es dort etwas Leckeres zu schmausen gibt, packen wir unseren Rucksack oder Picknick-Korb.  <br>
-            Welch GLÜCK, den Urlaub direkt vor der Haustür zu haben... <br>
-
-
-
+            Was wir manchmal echt vermissen: köstliches französches Essen - <a href="/rezepte/zwiebeltarte-mit-pflaumen" target="_blank">Tarte</a>, Cidre, Galettes, ein guter Wein....
+            Bis es dort etwas Leckeres zu schmausen gibt, packen wir unseren Rucksack oder Picknick-Korb. <br>
+            <br>
+            Welch GLÜCK, den Urlaub direkt vor der Haustür zu haben...<br>
+            <br>
+            <a href="/rezepte/?search=%2523lavendelfeld" target="_blank">Zu den Rezepten</a>
           </div>
         </div>
       </div>
@@ -99,13 +99,17 @@
         <img src="/imgs/geschichten/waldpicknick.jpg" alt="">
         <div class="text">
           <div class="content">
-            <h3>WALDPICKNICK - Geniessen unter Freunden</h3>
+            <h3>WALDPICKNICK - <br>Geniessen unter Freunden</h3>
             <br>
             <br>
             Wir lieben den Wald direkt vor unserer Haustür! Ein Arboretum. Ein Kleinod. <br>
             Dort joggen, spazieren, spielen, gedenken, beten wir. Wir treffen Freunde & Tiere, pflücken BÄRLAUCH, stibitzen BEEREN, entdecken PILZE, trinken Brunnenwasser, waten im Tretbecken, sammeln Kastanien, ... <br>
             Und wenn im Oktober das kleine Café am Brunnenhäuschen schließt, packen wir in unsere Körbchen viele KLEINE KÖSTLICHKEITEN und freuen uns auf unser Waldpicknick. <br>
-            Vermooste Treppenstufen, dicke Steine am Wasser, ausgehöhlte Totholzstämme - kann es eine schönere Kulisse geben? GOLDENE BLÄTTER fallen und wir decken auf einem BAUMSTAMM unseren Tisch. So wie die dicke Eiche am Wegesrand die alte Buche fest umarmt, so fühlen auch wir uns mit der Natur verbunden. Mitgebrachtes schmeckt an der FRISCHEN LUFT einfach viel besser als zu Haus! Und weil das Orkantief "Friederike" im Januar 2018 auch in unserem Lieblingswald eine Schneise der Verwüstung hinterlassen hat, beteiligen wir uns absolut gern an der Aktion "Bürgerwald". Es macht etwas mit uns, unsere selbst gepflanzten Bäume wachsen sehen zu können! Und irgendwann - wenn sie groß und stark sind - freuen wir uns darauf, in ihrem SCHATTEN zum Waldpicknick einzuladen. Welch GLÜCK für uns und unsere Freunde....
+            Vermooste Treppenstufen, dicke Steine am Wasser, ausgehöhlte Totholzstämme - kann es eine schönere Kulisse geben? GOLDENE BLÄTTER fallen und wir decken auf einem BAUMSTAMM unseren Tisch. So wie die dicke Eiche am Wegesrand die alte Buche fest umarmt, so fühlen auch wir uns mit der Natur verbunden. Mitgebrachtes schmeckt an der FRISCHEN LUFT einfach viel besser als zu Haus! Und weil das Orkantief "Friederike" im Januar 2018 auch in unserem Lieblingswald eine Schneise der Verwüstung hinterlassen hat, beteiligen wir uns absolut gern an der <a href="https://www.brakel.de/Leben/DER-Bürgerwald-Brakel/Infos-zum-Bürgerwald" target="_blank">Aktion "Bürgerwald"</a>. Es macht etwas mit uns, unsere selbst gepflanzten Bäume wachsen sehen zu können! Und irgendwann - wenn sie groß und stark sind - freuen wir uns darauf, in ihrem SCHATTEN zum Waldpicknick einzuladen. <br>
+            <br>
+            Welch GLÜCK für uns und unsere Freunde....<br>
+            <br>
+            <a href="/rezepte/?search=%2523picknick" target="_blank">Zu den Rezepten</a>
           </div>
         </div>
       </div>
@@ -126,8 +130,10 @@
             <h3>UNSER TANNENBAUM</h4> <br>
             Alle Jahre wieder haben wir tatsächlich das große GLÜCK, uns frühzeitig in einer Schonung unseren Tannenbaum aussuchen, ihn dann ein paar Tage vor Weihnachten selbst schlagen und feierlich nach Hause geleiten zu können. Alle Jahre wieder zelebrieren wir diesen Brauch gemütlich mit heißem Apfelpunsch & Glühwein, köstlichen Keksen und einer ordentlichen Portion Vorfreude auf das große Fest. Wir lieben unseren Tannenbaum! Wir lieben es, ihn gemeinsam zu schmücken, ihn zu besingen, zu bestaunen und ihm seinen Platz in unserer Mitte zu geben - mit all seinem Glanz, seiner Hoffnung, seines Friedens und seiner Freude! Auch wenn farblich viele verschiedene Konfektionen für das Kleid unseres Baumes in den Kisten warten, so schmücken wir ihn eigentlich alle Jahre wieder - skandinavisch klassisch - in rot & weiß. Und alle Jahre wieder kaufen wir ein paar ganz besondere Schmuckstücke, die uns eine Geschichte erzählen und ihn zu unserem ganz persönlichen Weihnachtsbaum machen. In diesem besonderen Jahr 2020 werden wir dankbar vier weiße Porzellan-Löffel an die Zweige hängen, wir haben allen Grund dazu: viel mehr als GLÜCK - Segen! <br>
             <br>
-            <h3>WEIHNACHTSBÄCKEREI MIT OMA & OPA </h4><br>
+            <h3>WEIHNACHTSBÄCKEREI <br> MIT OMA & OPA </h4><br>
             Während Nicole die Kisten mit der Weihnachtsdekoration aus dem Keller holt, stöbert Jette bereits in sämtlichen Backbüchern und ihren Aufzeichnungen, welche Weihnachtsplätzchen es in diesem Jahr in die Top 10 der Keksdosen schafft. Außer Konkurrenz rangiert das Spritzgebäck von Oma und Opa auf dem allerersten Platz - und das schon, seit Nicole noch ein kleines Kind war. Eine liebgewonnene Tradition: Jette und ihr Bruder Moritz backen jedes Jahr wieder bei und mit den Großeltern für die gesamten Familien - Spritzgebäck aus 2,5 kg Mehl! Dabei wird in der Weihnachtsbäckerei ganz fortschrittlich in Arbeitsteilung gewerkelt. Während sich Oma und Jette um das Herstellen des Teigs kümmern, bringen Opa und Moritz den Fleischwolf in Position und den Backofen auf Betriebstemperatur. Die Technik ist eben Männersache! Und wenn der Teig zwei Spielrunden "Rummikub" im Kühlschrank verweilt hat, schreitet die Mannschaft zur Tat: Opa dreht den Fleischwolf, Jette und Moritz schneiden die Teigstücke ab und platzieren sie abwechselnd auf den Blechen, sorgen für Teig-Nachschub. Oma bedient Ofen und Auskühlgitter und startet bereits mit der Schokoglasur - Fließbandarbeit par Excellance! Aufgrund von Corona war dieses Jahr ein gemeinsames Backen nicht möglich, Oma & Opa haben es dieses Jahr leider allein gemacht. Unsere Freude war riesengroß, als zum ersten Advent plötzlich zwei prall gefüllte Dosen mit den "weltbesten Weihnachtsplätzchen" vor unserer Haustür standen... unerwartetes WEIHNACHTSGLÜCK! <br>
+            <br>
+            <a href="/rezepte/?search=%2523weihnachten" target="_blank">Zu den Rezepten</a>
           </div>
         </div>
       </div>
